# hxi2

./: .dockerignore  .dprint.jsonc  .gitignore  .gitmodules  .golangci.yml  Cargo.toml  DEV.md  Dockerfile.auth  Dockerfile.parrainsup  Dockerfile.sqlite-web  Dockerfile.tree  README.md  buf.gen.yaml  buf.yaml  justfile  menu-items.ts  tsconfig.json  utils.just
auth/: .gitignore  README.md  api.go  database.go  discord-bot.go  go.mod  go.sum  justfile  jwt.go  key-mgmt.go  main.go  package.json  pnpm-lock.yaml  project-api.go  schema.sql  webpack.config.ts
auth-rs/: .gitignore  Cargo.toml  build.rs  justfile
auth-rs/src/: app_config.rs  auth_service.rs  main.rs  permissions_checking.rs
auth/frontend-src/: login.html  login.scss  login.ts
generated-proto/: permissions.json
generated-proto/parse-perms/: Cargo.toml  README.md
generated-proto/parse-perms/src/: main.rs
generated-proto/rs/: Cargo.toml
generated-proto/rs/buffa/: auth.v1.greet.__view.rs  auth.v1.greet.rs  auth.v1.mod.rs  auth.v1.permissions.__ext.rs  auth.v1.permissions.__view.rs  auth.v1.permissions.rs  auth.v2.auth.__view.rs  auth.v2.auth.rs  auth.v2.auth_data.__view.rs  auth.v2.auth_data.rs  auth.v2.jwt.__view.rs  auth.v2.jwt.rs  auth.v2.mod.rs  auth.v2.permissions.__ext.rs  auth.v2.permissions.__view.rs  auth.v2.permissions.rs  mod.rs
generated-proto/rs/connect/: auth.v1.greet.__connect.rs  auth.v1.mod.rs  auth.v1.permissions.__connect.rs  auth.v2.auth.__connect.rs  auth.v2.mod.rs  mod.rs
generated-proto/rs/src/: lib.rs
global-frontend-dependencies/: _build-asset-inserter.ts  _webpack-utils.ts  authUtils.ts  dvd.scss  dvd.ts  global.scss  iMenu.ts  mixins-variables.scss  package.json  perms.ts  pnpm-lock.yaml  ui_dialog.scss  ui_dialog.ts  ui_fuzzy_input.scss  ui_fuzzy_input.ts  ui_interfaces.ts  ui_loader.scss  ui_loader.ts  ui_tabs.scss  ui_tabs.ts
global-frontend-dependencies/microfuzz/: README.md  impl.js  index.d.ts  index.js  normalizeText.d.ts  normalizeText.js
global-go-utils/: go.mod  go.sum  http.go
global-go/discord-bot-wrapper/: go.mod  go.sum  main.go
global-go/utils/: auth.go  cacher.go  go.mod  go.sum  randomstrings.go  static-files.go  utils.go
global-rs/generate-permissions-checking/: Cargo.toml
global-rs/generate-permissions-checking/src/: lib.rs  main.rs
global-rs/utils/: Cargo.toml
global-rs/utils/src/: lib.rs
pages/: DEV.md  README.md  build-utils.ts  esbuild.config.ts  hugo.toml  justfile  package.json  pnpm-lock.yaml  sections.json  webpack.config.ts
pages/hugo-archetypes/: default.md
pages/hugo-layouts/_default/: baseof.html  single.html
pages/hugo-layouts/shortcodes/: details.html  figure.html  pulls-couleur.html  pulls.html
pages/public-pages/home/: .gitignore  eponge.md  eponge.ts  main.md  obtaining-email.md  obtaining-email.ts  pulls.md  pulls.scss  pulls.ts  template.html  template.ts
pages/shared/: page.scss
parrainsup/: .gitignore  api.go  database.go  go.mod  go.sum  justfile  main.go  package.json  pnpm-lock.yaml  schema.sql  webpack.config.ts
parrainsup/frontend-src/: api.ts  edit.html  edit.scss  edit.ts  main.html  main.scss  main.ts  user-card.scss  user-card.ts  vars.scss
proto/auth/v1/: greet.proto  permissions.proto
proto/auth/v2/: auth.proto  auth_data.proto  jwt.proto  permissions.proto
scripts/cdp-crawler/: .gitignore  README.md  cookies.py  get_cookies.sh  main.py  pyproject.toml
scripts/csv_members_to_sqlite/: main.py  pyproject.toml
scripts/discord-role-migration/: README.md  index.ts  package.json  schemas.ts  transaction-2026-06-05T19-40-20-623Z.json  year-to-year.jsonc
scripts/pdf-scrapper/: README.md  justfile  main.py  pyproject.toml
scripts/scrap_discord_users/: .gitignore  pyproject.toml  scrap_discord_users.py
scripts/stress-cooldown/: justfile  package.json  pnpm-lock.yaml  wrangler.toml
scripts/stress-cooldown/assets/: countdown.js  index.html  style.css
soundboard/: .gitignore  Dockerfile  README.md  go.mod  justfile  main.go  main.py  pyproject.toml
soundboard/templates/: main.html
sqlite-web/: README.md  backup.go  backup.py  decrypt-backup.py  go.mod  justfile  main.go  manual-backup.sh  sqlite-web-process.go
static/: .gitignore  README.md  justfile  package.json  wrangler.toml
static/assets/: index.html
static/html/: package.json  pnpm-lock.yaml  webpack.config.ts
static/html/frontend-src/: base-styles.ts  menu.html  menu.scss  menu.ts  page.ts
tree/: .gitignore  README.md  api.go  database.go  extraMermaidCode.js  global-tree.go  go.mod  go.sum  justfile  main.go  mermaid-entry.js  mermaid.min.js  package.json  pnpm-lock.yaml  schema.sql  tree-compiler.go  webpack.config.ts
tree/frontend-src/: add.html  add.scss  add.ts  api.ts  input.html  input.scss  input.ts  tree.html  tree.scss  tree.ts
