[package]
name = "auth-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
connectrpc = { workspace = true }
hxi2-proto = { path = "../generated-proto/rs" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

# [package.metadata.rust-analyzer]
# For LSP support on proto types - not needed anymore since using workspace
# linkedProjects = [
#     "../generated-proto/rs/Cargo.toml",
# ]
