[package]
name = "auth-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
connectrpc = { workspace = true }
ed25519-dalek = { version = "2.1", features = ["pkcs8", "pem"] }
hex = "0.4.3"
http = { workspace = true }
http-body = { workspace = true }
http-body-util = { workspace = true }
hxi2-proto = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
utils = { workspace = true }

[build-dependencies]
generate-permissions-checking = { workspace = true }
anyhow = { workspace = true }

# [package.metadata.rust-analyzer]
# For LSP support on proto types - not needed anymore since using workspace
# linkedProjects = [
#     "../generated-proto/rs/Cargo.toml",
# ]
