[package]
name = "hxi2-proto"
version = "0.1.0"
edition = "2024"

[lib]
name = "hxi2_proto"
path = "src/lib.rs"

[dependencies]
buffa = { version = "0.7.1", features = ["json"] }
buffa-types = { version = "0.7.1", features = ["json"] }
connectrpc = { version = "0.7.0", features = ["axum", "client", "server", "tls"] }
http = "1.4.2"
http-body = "1.0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
