[package]
name = "hxi2-proto"
version = "0.1.0"
edition = "2024"

[lib]
name = "hxi2_proto"
path = "src/lib.rs"

[dependencies]
buffa = { workspace = true }
buffa-types = { workspace = true }
connectrpc = { workspace = true }
http = { workspace = true }
http-body = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
