[package]
name = "generate-permissions-checking"
version = "0.1.0"
edition = "2024"

[lib]
name = "generate_permissions_checking"
path = "src/lib.rs"

[dependencies]
anyhow = { workspace = true }
buffa = { workspace = true }
buffa-types = { workspace = true }
hxi2-proto = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
